# iamdonebruh

./: .gitignore  README.md  check.py  ingestion.py  pyproject.toml  requirements.txt  test_rag.py
app/: main.py  rag.py
app/chroma_db/: chroma.sqlite3
